[tool.poetry]
name = "cuaca"
version = "0.3.0"
description = "A python wrapper for Malaysian Weather Service API"
license = "BSD-3-Clause"
authors = ["sweemeng <sweester@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
